# energy-assistant-backend

./: .coverage  .env  .gitignore  .pre-commit-config.yaml  .ruff.toml  404.html  Dockerfile  LICENSE  MANIFEST.in  Readme.md  app.py  config.yaml.dist  emhass-0.5.1-py3-none-any.whl  energy_assistant.db-journal  energy_assistant.db.bak  energy_assistant.yaml  energy_assistant.yaml.dist  index.html  mkdocs.yml  pyproject.toml  renovate.json  requirements.txt  requirements.txt.old  search.html  test.csv
.devcontainer/: devcontainer.json
.github/workflows/: lint_test.yaml  release.yaml  update_pre_commit.yaml
about/: index.html
app/: EmhassOptimizer.py  EmhassOptimzer.py  __init__.py  alembic.ini  app-flask.py  app.py  constants.py  db.py  main.py  manage-flask.py  mqtt.py  optimizer.py  settings.py  storage.py
app/api/: __init__.py  main.py
app/api/device/: __init__.py  schema.py  use_cases.py  views.py
app/api/forecast/: schema.py  use_cases.py  views.py
app/api/history/: __init__.py  schema.py  use_cases.py  views.py
app/api/home_measurement/: __init__.py  schema.py  use_cases.py  views.py
app/api/sessionlogs/: schema.py  use_cases.py  views.py
app/config/: develop.env  local.env  test.env
app/config/deviceregistry/v-zug/: dishwasher adora s.yaml  dryer adora TS WP.yaml
app/devices/: __init__.py  analysis.py  config.py  device.py  evcc.py  heat_pump.py  home.py  homeassistant.py  mqtt.py  registry.py  state_value.py  stiebel_eltron.py  utility_meter.py
app/models/: __init__.py  base.py  device.py  forecast.py  home.py  schema.py  sessionlog.py
config_file/: index.html
device_models/: index.html
devices/: __init__.py
docs/: README.md  Readme.md  _config.yml  about.md  config_file.md  device_models.md  index.md  installation.md
emhass/: command_line.py  forecast.py  machine_learning_forecaster.py  optimization.py  retrieve_hass.py  utils.py  web_server.py
emhass/static/: style.css
emhass/templates/: index.html
energy_assistant/: EmhassOptimizer.py  __init__.py  alembic.ini  constants.py  db.py  emhass_optimizer.py  main.py  mqtt.py  optimizer_base.py  settings.py  storage.py  websocket.py
energy_assistant/api/: base.py  main.py
energy_assistant/api/config/: __init__.py  schema.py  use_cases.py  views.py
energy_assistant/api/device/: __init__.py  schema.py  use_cases.py  views.py
energy_assistant/api/forecast/: __init__.py  schema.py  use_cases.py  views.py
energy_assistant/api/history/: __init__.py  schema.py  use_cases.py  views.py
energy_assistant/api/home_measurement/: schema.py  use_cases.py  views.py
energy_assistant/api/sessionlogs/: __init__.py  schema.py  use_cases.py  views.py
energy_assistant/config/: develop.env  local.env  test.env
energy_assistant/config/deviceregistry/v-zug/: dishwasher adora s.yaml  dryer adora TS WP.yaml
energy_assistant/devices/: __init__.py  analysis.py  config.py  device.py  evcc.py  heat_pump.py  home.py  homeassistant.py  homeassistant_device.py  registry.py  state_value.py  utility_meter.py
energy_assistant/devices/controller/: on_off_controller.py
energy_assistant/importer/: __init__.py  homeassistant.py
energy_assistant/migrations/: apply.py  env.py
energy_assistant/migrations/versions/: 0bf7066b6d6c_first_commit.py  2558c9508fcc_extend_devices_fields.py  d43efed24fbc_drop_date_column.py  efac279d8401_create_device_table.py  fa8f65c2f997_remove_consumed_energy_columns.py
energy_assistant/models/: base.py  device.py  forecast.py  home.py  schema.py  sessionlog.py
energy_assistant/optimizer/: __init__.py  config.py  emhass_optimizer.py  forecasting.py  ml_models.py  optimization.py  state_management.py
energy_assistant/storage/: __init__.py  config.py  storage.py
installation/: index.html
migrations/: apply.py  env.py
migrations/versions/: 0bf7066b6d6c_first_commit.py  2dbe1d6a4fa6_add_utility_meter.py  81f94b4136ee_added_power_mode.py  b6020d5b13fc_create_session_log_table.py  d43efed24fbc_drop_date_column.py  efac279d8401_create_device_table.py
nginx/: default.conf
scripts/: build.sh  create-dev-db.sh  fetch-client.sh  install-client.sh  lint.sh  run-container.sh  setup.sh  setversion.py
search/: search_index.json
tests/: __init__.py  config.yaml  conftest.py  test_analysis.py  test_devices.py  test_main.py  test_state_value.py  test_utility_meter.py  utils.py
tests/api/: test_base.py  test_base_integration.py  test_base_simple.py  test_coverage_summary.py  test_refactoring_verification.py
tests/api/config/: __init__.py  config.yaml  test_devices.py
tests/api/devices/: __init__.py  test_views.py
tests/api/homemeasurement/: test_views.py
tests/devices/: test_devices.py  test_heatpump.py  test_views.py
tests/homemeasurement/: __init__.py  test_views.py
tests/optimizer/: __init__.py  test_base.py  test_config.py  test_emhass_optimizer.py  test_forecasting.py  test_ml_models.py  test_optimization.py  test_state_management.py
tests/storage/: config.yaml  test_config.py
