
[build-system]
requires      = ["setuptools>=62.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy_assistant"
version = "0.0.92"
description = "Energy Assistant"
readme = "Readme.md"
authors = [{ name = "The Energy Assistant Creators", email = "pail23@users.noreply.github.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
]
keywords = ["energy assistant", "home assistant"]
dependencies = [
    "SQLAlchemy==2.0.31",
    "requests==2.32.3",
    "fastapi==0.111.0",
    "pydantic-settings==2.3.3",
    "pyyaml >= 6.0.1",
    "alembic==1.13.1",
    "aiosqlite==0.19.0",
    "python-dotenv",
    "uvicorn[standard]==0.30.1",
    "apscheduler==3.10.4",
    "paho-mqtt==2.1.0",
    "jinja2==3.1.4",
    "colorlog==6.8.2",
    "emhass==0.10.1",
    "energy_assistant_frontend==0.0.58",
    "hass-client==1.1.1"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "httpx==0.27.0",
  "bumpver",
  "isort",
  "pip-tools",
  "black==24.4.2",
  "codespell==2.3.0",
  "mypy==1.10.0",
  "ruff==0.4.10",
  "pytest==8.2.2",
  "pytest-asyncio==0.23.7",
  "pytest-aiohttp==1.0.5",
  "pytest-cov==5.0.0",
  "pytest-env",
  "pre-commit==3.7.1",
  "types-PyYAML",
  "types-requests",
  "types-pytz",
  "pandas-stubs"
]

[project.scripts]
eass = "energy_assistant.main:main"
eass_apply = "energy_assistant.migrations.apply:main"

[project.urls]
Homepage = "https://github.com/pail23/energy-assistant-backend"

[tool.setuptools]
packages = ["energy_assistant"]

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
known_first_party = [
    "tests",
]
forced_separate = [
    "tests",
]
combine_as_imports = true


[tool.codespell]
ignore-words-list = "hass"
count=true

[tool.ruff]

# The contents of this file is based on https://github.com/home-assistant/core/blob/dev/pyproject.toml

target-version = "py311"

lint.select = [
    "B007", # Loop control variable {name} not used within loop body
    "B014", # Exception handler with duplicate exception
    "C",  # complexity
    "D",  # docstrings
    "E",  # pycodestyle
    "F",  # pyflakes/autoflake
    "I", # isort
    "ICN001", # import concentions; {name} should be imported as {asname}
    "PERF",
    "PGH004",  # Use specific rule codes when using noqa
    "PLC0414", # Useless import alias. Import alias does not rename original package.
    "PLC", # pylint
    "PLE", # pylint
    "PLW", # pylint
    "SIM105", # Use contextlib.suppress({exception}) instead of try-except-pass
    "SIM117", # Merge with-statements that use the same scope
    "SIM118", # Use {key} in {dict} instead of {key} in {dict}.keys()
    "SIM201", # Use {left} != {right} instead of not {left} == {right}
    "SIM212", # Use {a} if {a} else {b} instead of {b} if not {a} else {a}
    "SIM300", # Yoda conditions. Use 'age == 42' instead of '42 == age'.
    "SIM401", # Use get from dict with default instead of an if block
    "T20",  # flake8-print
    "TRY004", # Prefer TypeError exception for invalid type
    "RUF006", # Store a reference to the return value of asyncio.create_task
    "W",  # pycodestyle
]

lint.ignore = [
    "D202",  # No blank lines allowed after function docstring
    "D203",  # 1 blank line required before class docstring
    "D213",  # Multi-line docstring summary should start at the second line
    "D404",  # First word of the docstring should not be This
    "D406",  # Section name should end with a newline
    "D407",  # Section name underlining
    "D411",  # Missing blank line before section
    "E501",  # line too long
    "E731",  # do not assign a lambda expression, use a def
    "T201",  # print found
]
exclude = ["migrations", ".venv"]
line-length = 120


[tool.ruff.lint.per-file-ignores]
"energy_assistant/models/__init__.py" = ["F401"]

[tool.ruff.format]
exclude = [".venv", "migrations"]

[tool.black]
target-version = ['py311']
line-length = 120
exclude="migrations"

[flake8-pytest-style]
fixture-parentheses = false

[mccabe]
max-complexity = 25


[tool.mypy]
python_version = "3.11"
exclude="migrations"


[[tool.mypy.overrides]]
module = [
  "energy_assistant.*"
]
ignore_missing_imports = true
follow_imports = "skip"
disallow_untyped_defs = true
disallow_untyped_calls = true


[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
  ".",
]
testpaths = [
    "tests"
]
norecursedirs = [
    ".git"
]
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
markers = [
  "tmp: Temporary",
  "optional: Optional",
]
env = [
  "APP_CONFIG_FILE=test"
]
